# pyconse2024_keynote

./: .gitignore  README.md  index.html
code/cpython/: simple.c
code/rust_pyo3/: Cargo.toml  pyproject.toml
code/rust_pyo3/src/: lib.rs
code/shiboken_hello/: CMakeLists.txt  Makefile  bindings.xml  test.cpp
code/zig/: hellomodule.zig  setup.py
code/zig_pydust/: pyproject.toml
code/zig_pydust/src/: hello.zig
css/: personal-theme.css  qt.css
