[tool.poetry]
name = "simple_zig"
include = [ { path = "src/", format = "sdist" }, { path = "hello/*.so", format = "wheel" } ]
authors = ["Your Name"]
description = "Hello module"
version = "0.1"

[tool.poetry.build]
script = "build.py"

[build-system]
requires = ["poetry-core", "ziggy-pydust==0.21.0"]
build-backend = "poetry.core.masonry.api"

[[tool.pydust.ext_module]]
name = "simple_zig"
root = "src/hello.zig"
